add swagger documentation for chargers
